--- a/k8s/setups/loki/loki-values.yaml
+++ b/k8s/setups/loki/loki-values.yaml
@@ -1,90 +1,57 @@
-# Loki Stack Helm Values
-# helm repo add grafana https://grafana.github.io/helm-charts
-# helm repo update
-# helm install loki grafana/loki-stack -n logging --create-namespace -f loki-stack-values.yaml
+# 배포 모드: simple-scalable (read/write 분리, 중소규모에 적합)
+deploymentMode: SimpleScalable
 
 loki:
-  enabled: true
+  # 인증 비활성화 (내부 사용)
+  auth_enabled: false
 
-  # Failover를 위한 여러 replica (노드 장애 시 다른 replica가 계속 동작)
+  # 공통 설정
+  commonConfig:
+    replication_factor: 1
+
+  # 스토리지 설정
+  storage:
+    type: filesystem
+
+  # 스키마 설정
+  schemaConfig:
+    configs:
+      - from: "2024-01-01"
+        store: tsdb
+        object_store: filesystem
+        schema: v13
+        index:
+          prefix: index_
+          period: 24h
+
+  # 보존 기간 설정
+  limits_config:
+    retention_period: 168h  # 7일
+    max_query_length: 168h
+    # 수집 제한
+    ingestion_rate_mb: 10
+    ingestion_burst_size_mb: 20
+    per_stream_rate_limit: 5MB
+    per_stream_rate_limit_burst: 10MB
+    max_entries_limit_per_query: 10000
+    max_streams_per_user: 0
+    max_global_streams_per_user: 0
+
+  # Compactor 설정 (오래된 로그 자동 삭제)
+  compactor:
+    retention_enabled: true
+    delete_request_store: filesystem
+    retention_delete_delay: 2h
+    retention_delete_worker_count: 150
+    compaction_interval: 10m
+
+# Write 컴포넌트 (로그 수신 및 저장)
+write:
   replicas: 3
-
   persistence:
     enabled: true
-    size: 35Gi  # 3개 replica × 35Gi = 총 105Gi (100GB 목표)
-    storageClassName: local-path # k3s 기본 storageClass
-
-  config:
-    # 인증 비활성화 (내부 사용)
-    auth_enabled: false
-
-    # 수신 설정
-    ingester:
-      chunk_idle_period: 3m
-      chunk_block_size: 262144
-      chunk_retain_period: 1m
-      max_transfer_retries: 0
-      lifecycler:
-        ring:
-          kvstore:
-            store: inmemory
-          replication_factor: 1
-
-    # 제한 설정
-    limits_config:
-      # 7일 보존
-      retention_period: 168h
-      # 쿼리 제한
-      max_query_length: 168h
-      # 수집 제한
-      ingestion_rate_mb: 10
-      ingestion_burst_size_mb: 20
-      per_stream_rate_limit: 5MB
-      per_stream_rate_limit_burst: 10MB
-      max_entries_limit_per_query: 10000
-      max_streams_per_user: 0
-      max_global_streams_per_user: 0
-
-    # 스키마 설정
-    schema_config:
-      configs:
-        - from: 2024-01-01
-          store: boltdb-shipper
-          object_store: filesystem
-          schema: v11
-          index:
-            prefix: index_
-            period: 24h
-
-    # 스토리지 설정
-    storage_config:
-      boltdb_shipper:
-        active_index_directory: /data/loki/boltdb-shipper-active
-        cache_location: /data/loki/boltdb-shipper-cache
-        cache_ttl: 24h
-        shared_store: filesystem
-      filesystem:
-        directory: /data/loki/chunks
-
-    # Compactor 설정 (오래된 로그 자동 삭제)
-    compactor:
-      working_directory: /data/loki/compactor
-      shared_store: filesystem
-      compaction_interval: 10m
-      retention_enabled: true
-      retention_delete_delay: 2h
-      retention_delete_worker_count: 150
-
-    # 청크 저장 설정
-    chunk_store_config:
-      max_look_back_period: 168h # 7일
-
-    # 테이블 관리 설정
-    table_manager:
-      retention_deletes_enabled: true
-      retention_period: 168h # 7일
-
-  # 리소스 제한
+    size: 35Gi
+    storageClass: local-path
   resources:
     limits:
       cpu: 1000m
@@ -93,90 +60,61 @@ loki:
       cpu: 200m
       memory: 512Mi
 
-# Promtail 설정 (모든 노드에서 로그 수집)
-promtail:
-  enabled: true
-
-  # DaemonSet으로 배포 (모든 노드에서 실행)
-  daemonset:
+# Read 컴포넌트 (쿼리 처리)
+read:
+  replicas: 2
+  persistence:
     enabled: true
+    size: 10Gi
+    storageClass: local-path
+  resources:
+    limits:
+      cpu: 500m
+      memory: 1Gi
+    requests:
+      cpu: 100m
+      memory: 256Mi
 
-  config:
-    # Loki 서버 주소
-    clients:
-      - url: http://loki:3100/loki/api/v1/push
+# Backend 컴포넌트 (compactor 등)
+backend:
+  replicas: 1
+  persistence:
+    enabled: true
+    size: 10Gi
+    storageClass: local-path
+  resources:
+    limits:
+      cpu: 500m
+      memory: 1Gi
+    requests:
+      cpu: 100m
+      memory: 256Mi
 
-    # 로그 수집 설정
-    scrape_configs:
-      # 1. Kubernetes Pod 로그 자동 수집
-      - job_name: kubernetes-pods
-        pipeline_stages:
-          - docker: {}
-        kubernetes_sd_configs:
-          - role: pod
-        relabel_configs:
-          # Pod 네임스페이스
-          - source_labels: [__meta_kubernetes_namespace]
-            target_label: namespace
-          # Pod 이름
-          - source_labels: [__meta_kubernetes_pod_name]
-            target_label: pod
-          # Container 이름
-          - source_labels: [__meta_kubernetes_pod_container_name]
-            target_label: container
-          # Pod labels을 Loki labels로 변환
-          - action: labelmap
-            regex: __meta_kubernetes_pod_label_(.+)
-          # 로그 파일 경로
-          - source_labels:
-              [__meta_kubernetes_pod_uid, __meta_kubernetes_pod_container_name]
-            target_label: __path__
-            separator: /
-            replacement: /var/log/pods/*$1/*.log
-
-      # 2. Kubernetes 시스템 로그 수집 (선택)
-      - job_name: kubernetes-system
-        static_configs:
-          - targets:
-              - localhost
-            labels:
-              job: systemd-journal
-              __path__: /var/log/journal
-
-  # 리소스 제한
+# Gateway (Nginx - 선택적)
+gateway:
+  enabled: true
+  replicas: 1
   resources:
     limits:
       cpu: 200m
       memory: 256Mi
     requests:
-      cpu: 100m
+      cpu: 50m
       memory: 128Mi
 
-  # 볼륨 마운트 (Pod 로그 수집)
-  extraVolumes:
-    - name: pods
-      hostPath:
-        path: /var/log/pods
-    - name: containers
-      hostPath:
-        path: /var/lib/docker/containers
+# 단일 바이너리 모드 비활성화
+singleBinary:
+  replicas: 0
 
-  extraVolumeMounts:
-    - name: pods
-      mountPath: /var/log/pods
-      readOnly: true
-    - name: containers
-      mountPath: /var/lib/docker/containers
-      readOnly: true
+# 모니터링
+monitoring:
+  selfMonitoring:
+    enabled: false
+    grafanaAgent:
+      installOperator: false
+  lokiCanary:
+    enabled: false
 
-# Grafana 설정 (이미 있으면 false로)
-grafana:
-  enabled: false
-
-# Fluent Bit (더 가벼운 대안, 선택사항)
-fluent-bit:
-  enabled: false
-
-# Logstash (더 무거운 대안, 비활성화)
-logstash:
+# 테스트 비활성화
+test:
   enabled: false
